--- a/src/app/features/tasks/task-detail-panel/task-detail-panel.component.scss
+++ b/src/app/features/tasks/task-detail-panel/task-detail-panel.component.scss
@@ -71,7 +71,7 @@ progress-bar {
   font-size: 14px;
 
   @include mq(xs) {
-    font-size: 16px;
+    font-size: 17px;
   }
 
   &:focus {
